# vail-sphere-rest-api-client

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml
.github/workflows/: ci.yml  main.yml  packages.yml
test_api_use/: test.py
vail-sphere-rest-api-client/vail_sphere_rest_api_client/models/: __init__.py  api_acl.py  api_activate.py  api_available.py  api_black_pearl_credentials.py  api_black_pearl_status.py  api_bp_placement.py  api_bucket_common.py  api_bucket_common_control.py  api_bucket_common_versioning.py  api_bucket_create.py  (+76 more)
vail_sphere_rest_api_client/: __init__.py
vail_sphere_rest_api_client/models/: __init__.py  api_account.py  api_account_update.py  api_acl.py  api_acl_type.py  api_activate.py  api_audit.py  api_audit_request.py  api_audit_request_data.py  api_audit_resource.py  api_audits.py  api_black_pearl_status.py  api_bp_placement.py  api_bucket.py  api_bucket_common.py  api_bucket_control.py  api_bucket_create.py  api_bucket_create_versioning.py  api_bucket_owner.py  api_bucket_update.py  api_bucket_update_control.py  api_bucket_update_versioning.py  api_bucket_versioning.py  api_capacity_summary.py  api_certificate.py  api_certificate_update.py  api_clone_state.py  api_cloud_bucket_request.py  api_cloud_bucket_request_cloud_provider.py  api_cloud_bucket_update.py  api_cognito_user_password_reset.py  api_cognito_user_password_update.py  api_credentials.py  api_delete_status_field.py  api_destinations.py  api_endpoint.py  api_endpoint_registration.py  api_endpoint_status.py  api_endpoint_status_field.py  api_endpoint_status_field_status.py  (+112 more)
(+175 files in other folders)
