[tool.poetry]
name = "vail-sphere-rest-api-client"
version = "2.0"
description = "A client library for accessing Vail Sphere REST API"
authors = []
readme = "README.md"
packages = [
    {include = "vail_sphere_rest_api_client"},
]
include = ["CHANGELOG.md", "vail_sphere_rest_api_client/py.typed"]


[tool.poetry.dependencies]
python = "^3.8"
httpx = ">=0.20.0,<0.28.0"
attrs = ">=21.3.0"
python-dateutil = "^2.8.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.2"
mypy = "^1.8.0"
types-python-dateutil = "^2.8.19.20240106"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "I", "UP"]